# slj

./: .clangd  .gitignore  Cargo.toml  README.md
fasm/: footer.asm  header.asm  ukazi.asm
jedro/: matematika.slj  natisni.slj  preberi.slj
primeri/: bool.slj  napake.slj  opti.slj  pozdravljen.slj  praštevila-brez-funkcij.slj  praštevila.slj  preberi.slj  rekurzija.slj  test.slj  tyche.slj  če.slj
src/: binary.rs  drevo.rs  lib.rs  main.rs  parser.rs  prevajanik.rs  program.rs  tokenizer.rs
src/parser/: argumenti.rs  drevo.rs  funkcija.rs  izraz.rs  lekser.rs  loci.rs  mod.rs  napaka.rs  okvir.rs  operatorji.rs  predprocesiraj.rs  stavek.rs  tip.rs  tokenizer.rs
src/program/: from_assembler.rs  mod.rs  postprocesiraj.rs  prevedi.rs  to_assembler.rs  v_assembler.rs  v_cpp.rs  v_fasm_x86.rs  zazeni.rs
standard/: natisni.slj
tests/: interpretiran.rs  preveden.rs  programi.rs
