[package]
name = "slj"
version = "0.1.0"
authors = ["Jakob Kenda <kenda.jakob@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
phf = { version = "0.11.1", features = ["macros"] }
bytes = "0.4.12"
