[package]
name = "slj"
version = "0.7.2"
authors = ["Jakob Kenda <kenda.jakob@gmail.com>"]
description = "Programski jezik v slovenščini | A programming language in Slovenian"
license = "GPL-3.0"
edition = "2021"
default-run = "slj"

[dependencies]
regex = "1.8.2"
no-panic = "0.1.22"
unsafe_unwrap = "0.1.0"
lazy_static = "1.4.0"

